--- a/index.html
+++ b/index.html
@@ -66,7 +66,13 @@
             a{font-size: 10px;}
             .res{margin-left: 60%;}
 
-            .s2{font-size: 12px;}
+            .s2{font-size: 12px; }
+
+            .comp{font-size: 10px;}
+
+            .profilImg{width:110px; height:110px;}
+
+            .res{font-size: 11px;}
 
             
         } 
