--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mon CV - Portfolio</title>
+  <title>My Portfolio - Resume</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
     :root {
@@ -173,84 +173,84 @@
 </head>
 <body>
   <header>
-    <h1>Mon Portfolio</h1>
+    <h1>My Portfolio</h1>
     <ul class="socials">
       <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
       <li><a href="#"><i class="fa-brands fa-square-twitter"></i></a></li>
       <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
       <li><a href="#"><i class="fa-brands fa-square-whatsapp"></i></a></li>
     </ul>
-    <button id="btn" onclick="toggleTheme()">🌙 Mode Sombre</button>
+    <button id="btn" onclick="toggleTheme()">🌙 Dark Mode</button>
   </header>
 
   <div class="container">
     <section class="profile">
-      <img src="https://via.placeholder.com/200" alt="Photo de profil" />
+      <img src="https://via.placeholder.com/200" alt="Profile Photo" />
       <div class="info">
-        <h2>Salut, je m'appelle <span style="color: var(--main-color);">Jean Dupont</span></h2>
-        <p>Je suis un développeur full-stack passionné par la création d'applications performantes et intuitives. J’aime résoudre des problèmes complexes et apprendre de nouvelles technologies.</p>
+        <h2>Hello, I'm <span style="color: var(--main-color);">John Smith</span></h2>
+        <p>I’m a passionate full-stack developer who loves building powerful and intuitive applications. I enjoy solving complex problems and learning new technologies every day.</p>
       </div>
     </section>
 
     <section class="section">
-      <h2>Compétences</h2>
+      <h2>Skills</h2>
       <div class="skills">
         <div class="card">
-          <h3>Développement Web</h3>
+          <h3>Web Development</h3>
           <p>HTML, CSS, JavaScript, React, PHP, Laravel</p>
         </div>
         <div class="card">
-          <h3>Programmation</h3>
+          <h3>Programming</h3>
           <p>Python, Java, C/C++, SQL</p>
         </div>
         <div class="card">
-          <h3>Autres</h3>
-          <p>Git, Linux, Réseaux, Docker</p>
+          <h3>Other Tools</h3>
+          <p>Git, Linux, Networking, Docker</p>
         </div>
       </div>
     </section>
 
     <section class="section">
-      <h2>Projets</h2>
+      <h2>Projects</h2>
       <div class="projects">
         <div class="card">
-          <h3>Guide Touristique Mobile</h3>
-          <p>Application Android permettant de découvrir les sites touristiques d'une région.</p>
+          <h3>Tourist Guide App</h3>
+          <p>Android app helping users discover tourist attractions in their area.</p>
         </div>
         <div class="card">
-          <h3>Gestion des Cités</h3>
-          <p>Plateforme web pour gérer les locataires et les bâtiments d'une cité universitaire.</p>
+          <h3>Housing Management System</h3>
+          <p>Web platform for managing tenants and university dorms.</p>
         </div>
         <div class="card">
-          <h3>Commande en Entreprise</h3>
-          <p>Application de gestion de commandes et de facturation pour PME.</p>
+          <h3>Business Order System</h3>
+          <p>Application for managing company orders and billing processes.</p>
         </div>
       </div>
     </section>
 
     <section class="section">
-      <h2>Formation</h2>
+      <h2>Education</h2>
       <div class="education">
         <div class="card">
-          <h3>Licence en Informatique</h3>
-          <p>Université de Paris, 2023</p>
+          <h3>Bachelor’s Degree in Computer Science</h3>
+          <p>University of London, 2023</p>
         </div>
         <div class="card">
           <h3>Certifications</h3>
-          <p>Python avancé, AWS Cloud Essentials, React Developer</p>
+          <p>Advanced Python, AWS Cloud Essentials, React Developer</p>
         </div>
       </div>
     </section>
 
     <section class="section" style="text-align:center;">
       <h2>Contact</h2>
-      <p>Intéressé par une collaboration ? N'hésitez pas à me contacter !</p>
-      <a href="mailto:jean.dupont@gmail.com" style="background: var(--main-color); color: white; padding: 10px 20px; border-radius: 8px; text-decoration:none; font-weight: bold;">Me Contacter</a>
+      <p>Interested in working together? Don’t hesitate to reach out!</p>
+      <a href="mailto:john.smith@gmail.com" style="background: var(--main-color); color: white; padding: 10px 20px; border-radius: 8px; text-decoration:none; font-weight: bold;">Contact Me</a>
     </section>
   </div>
 
   <footer>
-    <p>&copy; 2025 Jean Dupont | Développé avec ❤️ et HTML/CSS/JS</p>
+    <p>&copy; 2025 John Smith | Built with ❤️ using HTML, CSS, and JS</p>
   </footer>
 
   <script>
@@ -259,9 +259,9 @@
       const btn = document.getElementById("btn");
       body.classList.toggle("dark");
       if (body.classList.contains("dark")) {
-        btn.textContent = "☀️ Mode Clair";
+        btn.textContent = "☀️ Light Mode";
       } else {
-        btn.textContent = "🌙 Mode Sombre";
+        btn.textContent = "🌙 Dark Mode";
       }
     }
   </script>
