--- a/index.html
+++ b/index.html
@@ -180,15 +180,15 @@
       <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
       <li><a href="#"><i class="fa-brands fa-square-whatsapp"></i></a></li>
     </ul>
-    <button id="btn" onclick="toggleTheme()">🌙 Dark Mode</button>
+    <button id="btn" onclick="toggleTheme()">Dark Mode</button>
   </header>
 
   <div class="container">
     <section class="profile">
       <img src="https://via.placeholder.com/200" alt="Profile Photo" />
       <div class="info">
-        <h2>Hello, I'm <span style="color: var(--main-color);">John Smith</span></h2>
-        <p>I’m a passionate full-stack developer who loves building powerful and intuitive applications. I enjoy solving complex problems and learning new technologies every day.</p>
+        <h2>Hello, I'm <span style="color: var(--main-color);">Hermane Tize!</span></h2>
+        <p> I enjoy solving complex problems and learning new technologies every day.</p>
       </div>
     </section>
 
@@ -197,7 +197,7 @@
       <div class="skills">
         <div class="card">
           <h3>Web Development</h3>
-          <p>HTML, CSS, JavaScript, React, PHP, Laravel</p>
+          <p>HTML, CSS, JavaScript, React, PHP, Laravel, Java, Spring</p>
         </div>
         <div class="card">
           <h3>Programming</h3>
@@ -214,16 +214,12 @@
       <h2>Projects</h2>
       <div class="projects">
         <div class="card">
-          <h3>Tourist Guide App</h3>
-          <p>Android app helping users discover tourist attractions in their area.</p>
+          <h3>Small Tourist Guide Mobile App</h3>
+          <p>Android app helping users discover tourist attractions in Cameroon.</p>
         </div>
         <div class="card">
-          <h3>Housing Management System</h3>
-          <p>Web platform for managing tenants and university dorms.</p>
-        </div>
-        <div class="card">
-          <h3>Business Order System</h3>
-          <p>Application for managing company orders and billing processes.</p>
+          <h3>Shools Card Website</h3>
+          <p> A small platform for presenting Shools in Cameroon.</p>
         </div>
       </div>
     </section>
@@ -233,11 +229,13 @@
       <div class="education">
         <div class="card">
           <h3>Bachelor’s Degree in Computer Science</h3>
-          <p>University of London, 2023</p>
+          <p>University of Ngaoundere, 2024</p>
+          <h3>Master 1 in Software and System in Distributed Environment</h3>
+          <p>University of Ngaoundere, 2025</p>
         </div>
         <div class="card">
-          <h3>Certifications</h3>
-          <p>Advanced Python, AWS Cloud Essentials, React Developer</p>
+          <h3>Internship</h3>
+          <p>Internship, As a Programer at CDTIC Ngaoundere ,2023.</p>
         </div>
       </div>
     </section>
@@ -245,12 +243,12 @@
     <section class="section" style="text-align:center;">
       <h2>Contact</h2>
       <p>Interested in working together? Don’t hesitate to reach out!</p>
-      <a href="mailto:john.smith@gmail.com" style="background: var(--main-color); color: white; padding: 10px 20px; border-radius: 8px; text-decoration:none; font-weight: bold;">Contact Me</a>
+      <a href="mailto:hermane.tize@aims-cameroon.org" style="background: var(--main-color); color: white; padding: 10px 20px; border-radius: 8px; text-decoration:none; font-weight: bold;">Contact Me</a>
     </section>
   </div>
 
   <footer>
-    <p>&copy; 2025 John Smith | Built with ❤️ using HTML, CSS, and JS</p>
+    <p> Built with using HTML, CSS, and JS</p>
   </footer>
 
   <script>
@@ -259,9 +257,9 @@
       const btn = document.getElementById("btn");
       body.classList.toggle("dark");
       if (body.classList.contains("dark")) {
-        btn.textContent = "☀️ Light Mode";
+        btn.textContent = " Light Mode";
       } else {
-        btn.textContent = "🌙 Dark Mode";
+        btn.textContent = " Dark Mode";
       }
     }
   </script>
