--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Portfolio - Resume</title>
+  <title>hermane resume</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
     :root {
@@ -173,7 +173,7 @@
 </head>
 <body>
   <header>
-    <h1>My Portfolio</h1>
+    <h1>HERMANE TIZE</h1>
     <ul class="socials">
       <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
       <li><a href="#"><i class="fa-brands fa-square-twitter"></i></a></li>
@@ -185,7 +185,7 @@
 
   <div class="container">
     <section class="profile">
-      <img src="https://via.placeholder.com/200" alt="Profile Photo" />
+      <img src="https://via.placeholder.com/200" alt="Photo" />
       <div class="info">
         <h2>Hello, I'm <span style="color: var(--main-color);">Hermane Tize!</span></h2>
         <p> I enjoy solving complex problems and learning new technologies every day.</p>
@@ -218,8 +218,8 @@
           <p>Android app helping users discover tourist attractions in Cameroon.</p>
         </div>
         <div class="card">
-          <h3>Shools Card Website</h3>
-          <p> A small platform for presenting Shools in Cameroon.</p>
+          <h3>Schools Card Website</h3>
+          <p> A small platform for presenting Schools in Cameroon.</p>
         </div>
       </div>
     </section>
