--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <ul class="socials">
       <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
       <li><a href="#"><i class="fa-brands fa-square-twitter"></i></a></li>
-      <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+      <li><a href="https://www.linkedin.com/in/tize-hermane-tize-hermane-167b01383/"><i class="fa-brands fa-linkedin"></i></a></li>
       <li><a href="#"><i class="fa-brands fa-square-whatsapp"></i></a></li>
     </ul>
     <button id="btn" onclick="toggleTheme()">Dark Mode</button>
