--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
       margin-bottom: 2rem;
     }
 
+     .profile img {
+      border-radius: 50%;
+      width: 180px;
+      height: 180px;
+      object-fit: cover;
+      border: 4px solid var(--main-color);
+    }
     
     .info h2 {
       margin-bottom: 0.5rem;
