--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
   <div class="container">
     <section class="profile">
-      <img src="https://drive.google.com/uc?export=view&id=1HKF3Tb0w0eJcFZWfukEa32AaoHZstNG1"  width="200" 
+      <img src="https://media.licdn.com/dms/image/v2/D4E03AQF7BbZBzHxCnQ/profile-displayphoto-scale_400_400/B4EZpgQ.FZJ0Ag-/0/1762551756411?e=1764201600&v=beta&t=Ip5T6IXrRe8mkULGYIASTbpPQ5SECKEsExxf0MvNM64p"  width="200" 
           height="200"
           style="border-radius: 50%; box-shadow: 0 0 10px rgba(0,0,0,0.2);" alt="Photo" >
       <div class="info">
