--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
   <div class="container">
     <section class="profile">
-      <img src="https://drive.google.com/uc?export=view&id=1HKF3Tb0w0eJcFZWfukEa32AaoHZstNG1"  alt="Photo" >
+      <img src="TIZE_HERMANE.jpg"  alt="Photo" >
       <div class="info">
         <h2>Hello, I'm <span style="color: var(--main-color);">Hermane Tize!</span></h2>
         <p> I enjoy solving complex problems and learning new technologies every day.</p>
